--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@next/swc-win32-x64-msvc": "^15.1.4",
+    "motion": "^11.17.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-haiku": "^2.1.8",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
