--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@next/swc-win32-x64-msvc": "^15.1.4",
+    "clsx": "^2.1.1",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^11.17.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-haiku": "^2.1.8",
     "react-hook-form": "^7.54.2",
-    "swiper": "^11.2.1"
+    "react-icons": "^5.4.0",
+    "swiper": "^11.2.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
