--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/swc-win32-x64-msvc": "^15.1.4",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.11",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^11.17.0",
     "next": "15.1.4",
